; ModuleID = '/home/carl/AnghaBench/git/extr_pack-bitmap-write.c_reset_all_seen.c'
source_filename = "/home/carl/AnghaBench/git/extr_pack-bitmap-write.c_reset_all_seen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@seen_objects_nr = common dso_local global i32 0, align 4
@SEEN = common dso_local global i32 0, align 4
@ADDED = common dso_local global i32 0, align 4
@SHOWN = common dso_local global i32 0, align 4
@seen_objects = common dso_local global %struct.TYPE_2__** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @reset_all_seen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_all_seen() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %21, %0
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @seen_objects_nr, align 4
  %5 = icmp ult i32 %3, %4
  br i1 %5, label %6, label %24

6:                                                ; preds = %2
  %7 = load i32, i32* @SEEN, align 4
  %8 = load i32, i32* @ADDED, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @SHOWN, align 4
  %11 = or i32 %9, %10
  %12 = xor i32 %11, -1
  %13 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @seen_objects, align 8
  %14 = load i32, i32* %1, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %13, i64 %15
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = and i32 %19, %12
  store i32 %20, i32* %18, align 4
  br label %21

21:                                               ; preds = %6
  %22 = load i32, i32* %1, align 4
  %23 = add i32 %22, 1
  store i32 %23, i32* %1, align 4
  br label %2

24:                                               ; preds = %2
  store i32 0, i32* @seen_objects_nr, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
